--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-no-unsanitized": "^3.0.2",
+    "gulp-gzip": "^1.4.2",
+    "gulp-tar": "^3.1.0",
+    "handlebars": "^4.7.6",
     "htmlhint": "^0.11.0",
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "prettier": "1.18.2",
-    "gulp-tar": "^3.1.0",
-    "gulp-gzip": "^1.4.2",
-    "handlebars": "^4.7.6",
     "webpack-merge": "^5.1.4",
     "webpack-stream": "^6.1.0"
   },
@@ -38,14 +38,14 @@
     "node": ">12.0 || <12.0"
   },
   "dependencies": {
-    "argparse": "^1.0.10",
-    "del": "^5.1.0",
-    "stylelint": "^12.0.0",
     "@tensorflow/tfjs-converter": "1.3.2",
     "@tensorflow/tfjs-core": "1.3.2",
+    "argparse": "^1.0.10",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-vinyl-zip": "^2.2.1",
-    "merge-stream": "^2.0.0"
+    "merge-stream": "^2.0.0",
+    "stylelint": "^12.0.0"
   },
   "husky": {
     "hooks": {
