--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "lint-fix": "eslint --fix --ext .js,.mjs adblock-betafish",
     "prettier": "prettier --check adblock-betafish/**/*.{css,json,html}",
     "prettier-fix": "prettier --write adblock-betafish/**/*.{css,json,html}",
-    "html-hint": "htmlhint adblock-betafish/ -R ./rules/"
+    "html-hint": "htmlhint adblock-betafish/ -R ./rules/",
+    "submodules:update": "git submodule update --init --recursive",
+    "submodules:update-with-snippets": "git -c submodule.\"vendor/abp-snippets\".update=checkout submodule update --init --recursive",
+    "preinstall": "npm run install-abp-chrome && npm run install-abp-ui",
+    "postinstall": "npm run post-install-abp-ui && npm run install-snippets",
+    "install-abp-ui": "npm install --only=production --loglevel=error --no-audit --no-fund --no-optional --prefix ./adblockplusui/",
+    "post-install-abp-ui": "npm run dist --prefix ./adblockplusui/",
+    "install-abp-chrome": "npm install --no-audit --no-fund --no-optional --prefix ./adblockplusui/adblockpluschrome/",
+    "install-snippets": "npm install --loglevel=error --no-audit --no-fund --no-optional --prefix ./vendor/abp-snippets || echo 'Skipping abp-snippets installation'"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
