--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "post-install-abp-ui": "npm run dist --prefix ./adblockplusui/",
     "install-abp-chrome": "npm install --no-audit --no-fund --no-optional --prefix ./adblockplusui/adblockpluschrome/",
     "install-snippets": "npm install --loglevel=error --no-audit --no-fund --no-optional --prefix ./vendor/abp-snippets || echo 'Skipping abp-snippets installation'",
-    "build":"npx gulp devenv -t chrome"
+    "build": "npx gulp devenv -t chrome"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
@@ -49,6 +49,7 @@
   "dependencies": {
     "@tensorflow/tfjs-converter": "1.3.2",
     "@tensorflow/tfjs-core": "1.3.2",
+    "@types/chrome": "0.0.161",
     "argparse": "^1.0.10",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
