--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "homepage": "https://github.com/betafish-inc/adblock-next-gen/blob/master/README.md",
   "scripts": {
+    "ab-snippet-build": "npm run ab-snippet-rollup && npm run json-bundle",
+    "ab-snippet-rollup": "rollup --config build/config/rollup.config.js",
+    "json-bundle": "node build/jsonBundle.cjs",
     "lint": "eslint --ext .js,.mjs adblock-betafish",
     "lint-fix": "eslint --fix --ext .js,.mjs adblock-betafish",
     "prettier": "prettier --check adblock-betafish/**/*.{css,json,html}",
@@ -28,6 +31,8 @@
     "install-snippets": "npm install --loglevel=error --no-audit --no-fund --no-optional --prefix ./vendor/abp-snippets || echo 'Skipping abp-snippets installation'"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "21.0.0",
+    "@rollup/plugin-node-resolve": "13.0.5",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
@@ -39,6 +44,10 @@
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "prettier": "1.18.2",
+    "rollup": "2.52.8",
+    "rollup-plugin-license": "2.5.0",
+    "rollup-plugin-node-polyfills": "0.2.1",
+    "rollup-plugin-terser": "7.0.2",
     "webpack-merge": "^5.1.4",
     "webpack-stream": "^6.1.0"
   },
@@ -46,8 +55,6 @@
     "node": ">12.0 || <12.0"
   },
   "dependencies": {
-    "@tensorflow/tfjs-converter": "1.3.2",
-    "@tensorflow/tfjs-core": "1.3.2",
     "argparse": "^1.0.10",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
