Updated with version: 5.1.1 changes

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/betafish-inc/adblock-next-gen/blob/master/README.md",
   "scripts": {
+    "prepare": "husky install",
     "ab-snippet-build": "npm run ab-snippet-rollup && npm run json-bundle",
     "ab-snippet-rollup": "rollup --config build/config/rollup.config.js",
     "json-bundle": "node build/jsonBundle.cjs",
@@ -22,69 +23,59 @@
     "prettier-fix": "prettier --write adblock-betafish/**/*.{css,json,html}",
     "html-hint": "htmlhint adblock-betafish/ -R ./rules/",
     "submodules:update": "git submodule update --init --recursive",
-    "submodules:update-with-snippets": "git -c submodule.\"vendor/abp-snippets\".update=checkout submodule update --init --recursive",
-    "postinstall": "npm run install-snippets && npm run build-snippets && npm run install-webext-sdk && npm run merge-webext-sdk-sub && npm run build-webext-sdk",
-    "install-snippets": "npm install --loglevel=error --no-audit --no-fund --no-optional --prefix ./vendor/abp-snippets || echo 'Skipping abp-snippets installation'",
-    "build-snippets": "npm run build  --loglevel=error --no-audit --no-fund --no-optional --prefix ./vendor/abp-snippets || echo 'Skipping abp-snippets build'",
+    "postinstall": "npm run install-webext-sdk && npm run merge-webext-sdk-sub && npm run build-webext-sdk",
     "install-webext-sdk": "npm install --loglevel=error --no-audit --no-fund --no-optional --prefix ./vendor/webext-sdk || echo 'Skipping SDK installation'",
     "merge-webext-sdk-sub": "npm run --loglevel=error --prefix ./vendor/webext-sdk/node_modules/adblockpluscore merge-subscriptions -- --add_default --input=./../../../../adblock-betafish/data/subscriptions.json --output=$(pwd)/vendor/webext-sdk/custom-subscriptions.json",
     "build-webext-sdk": "npm run build --loglevel=error --no-audit --no-fund --no-optional --prefix ./vendor/webext-sdk || echo 'Skipping SDK build'",
-    "test-snippets": "npm run --prefix ./vendor/abp-snippets build && npm run ab-snippet-build && node ./tests/snippet_test_runner.mjs",
-    "test-snippets-debug": "npm run --prefix ./vendor/abp-snippets build && npm run ab-snippet-build && node ./tests/snippet_test_runner.mjs --debugPrint"
+    "test-snippets": "npm run ab-snippet-build && node ./tests/snippet_test_runner.mjs",
+    "test-snippets-debug": "npm run ab-snippet-build && node ./tests/snippet_test_runner.mjs --debugPrint"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "21.0.0",
-    "@rollup/plugin-node-resolve": "13.0.5",
-    "chai": "^4.2.0",
-    "chrome-remote-interface": "^0.27.2",
-    "chromedriver": "2.36.0",
+    "@rollup/plugin-commonjs": "22.0.2",
+    "@rollup/plugin-node-resolve": "13.3.0",
+    "chai": "4.3.6",
+    "chrome-remote-interface": "0.31.3",
+    "chromedriver": "104.0.0",
     "dmg": "0.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-no-unsanitized": "^3.0.2",
-    "extract-zip": "^2.0.0",
-    "geckodriver": "^1.9.0",
-    "gulp-gzip": "^1.4.2",
-    "gulp-tar": "^3.1.0",
-    "handlebars": "^4.7.6",
-    "htmlhint": "^0.11.0",
-    "husky": "^3.0.5",
-    "lint-staged": "^9.2.5",
-    "mocha": "^7.1.1",
+    "eslint": "8.21.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-no-unsanitized": "4.0.1",
+    "extract-zip": "2.0.1",
+    "geckodriver": "3.0.2",
+    "gulp-gzip": "1.4.2",
+    "gulp-tar": "3.1.0",
+    "handlebars": "4.7.7",
+    "htmlhint": "1.1.4",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
+    "mocha": "9.2.2",
     "ncp": "2.0.0",
-    "prettier": "1.18.2",
-    "rollup": "2.52.8",
-    "rollup-plugin-license": "2.5.0",
+    "prettier": "2.7.1",
+    "rollup": "2.77.2",
+    "rollup-plugin-license": "2.8.1",
     "rollup-plugin-node-polyfills": "0.2.1",
     "rollup-plugin-terser": "7.0.2",
-    "script-loader": "0.7.0",
-    "selenium-webdriver": "^4.0.0-alpha",
-    "source-map-loader": "3.0.0",
-    "webpack": "^4.41.6",
-    "webpack-merge": "5.1.4",
-    "webpack-stream": "6.1.1"
+    "script-loader": "0.7.2",
+    "selenium-webdriver": "4.3.1",
+    "source-map-loader": "4.0.0",
+    "webpack": "4.46.0",
+    "webpack-merge": "5.8.0",
+    "webpack-stream": "7.0.0"
   },
   "engines": {
     "node": ">=16.10.0",
     "npm": ">=7"
   },
   "dependencies": {
-    "@tensorflow/tfjs-converter": "1.3.2",
-    "@tensorflow/tfjs-core": "2.7.0",
-    "adblockpluscore": "^0.5.1",
-    "argparse": "^1.0.10",
-    "del": "^5.1.0",
-    "gulp": "^4.0.2",
-    "gulp-vinyl-zip": "^2.2.1",
-    "got": "^11.6.2",
-    "merge-stream": "^2.0.0",
-    "stylelint": "^12.0.0",
+    "@eyeo/snippets": "0.5.2",
+    "adblockpluscore": "0.5.1",
+    "argparse": "1.0.10",
+    "del": "7.0.0",
+    "gulp": "4.0.2",
+    "gulp-vinyl-zip": "2.5.0",
+    "got": "12.3.1",
+    "merge-stream": "2.0.0",
     "webextension-polyfill": "0.8.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "sh ./noMasterCommits.sh && lint-staged"
-    }
   }
 }
